--- a/src/scss/_my-page.scss
+++ b/src/scss/_my-page.scss
@@ -3,5 +3,15 @@
 #my-page {
 	.mypage-box {
 		@include components.card;
+		& > h3 {
+			padding-left: 4px;
+		}
+		& > .contextual {
+			opacity:0.001; 
+			transition: opacity 0.2s;
+		}
+		&:hover > .contextual {
+			opacity:1;
+		}
 	}
 }
