--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -18,6 +18,7 @@
 @use "project/news";
 @use "project/documents";
 @use "project/issue";
+@use "project/gantt";
 
 // @import url("/assets/application-93308368.css");
 
