--- a/src/scss/project/_issue.scss
+++ b/src/scss/project/_issue.scss
@@ -34,15 +34,6 @@ div.issue {
 
 #issue-changesets { 
 	div.changeset {
-		&:nth-child(odd) {
-			@include components.odd-row;
-		}
-		&:nth-child(even) {
-			@include components.even-row;
-		}
-		&:nth-child(odd),
-		&:nth-child(even) {
-			@include components.active-row;
-		}
+		@include components.odd-even-rows;
 	}
 }
