--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -595,7 +595,9 @@ div.flash {
 
 	&:nth-child(odd),
 	&:nth-child(even) {
-		@include active-row;
+		&:hover {
+			@include active-row;
+		}
 	}
 }
 
