--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -28,17 +28,20 @@
 
 #login-form {
 	margin: 2em auto;
-	padding: 18px 22px;
+	padding: 12px;
 	width: 320px;
 	border: 1px solid #d0d7de;
 	background: var(--muidocs-palette-secondary-50);
-	box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-	// box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+	border-radius: 12px;
 	label {
 		font-weight: 400;
-		padding-left: 2px;
-		margin-bottom: 5px;
-		display: block;
+    padding-left: 2px;
+    margin-bottom: 5px;
+    display: block;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    color: #484848;
 	}
 	input {
 		width: 100%;
