--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -5,7 +5,7 @@
 		&:has(> .child) {
 			display: flex;
 			flex-direction: column;
-			gap: 8px;
+			gap: 6px;
 		}
 		& > li {
 			&.root,
@@ -45,9 +45,9 @@
 							font-weight: 500;
 							display: inline-block;
 							text-shadow: none;
-							margin-bottom: 0.25em;
 							position: static;
 							transition: color 0.2s;
+							margin-bottom: 0; // 0.25em;
 							&:hover {
 								color: var(--muidocs-palette-primary-800);
 							}
@@ -62,7 +62,7 @@
 			}
 			&.root {
 				background: #f9fafb;
-				box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+				box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 				& > div {
 					&:has(+ .projects) {
 						padding-bottom: 8px;
@@ -72,9 +72,9 @@
 			&.child {
 				background: #fff;
 				border: 1px solid #d0d7de;
-				border-radius: 12px;
+				border-radius: 8px;
 				margin: 0;
-				box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.1), 0px 1px 1px 0px rgba(0, 0, 0, 0.07), 0px 1px 3px 0px rgba(0, 0, 0, 0.06);
+				// box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.1), 0px 1px 1px 0px rgba(0, 0, 0, 0.07), 0px 1px 3px 0px rgba(0, 0, 0, 0.06);
 				&:first-child {
 					margin-top: 0;
 				}
@@ -84,12 +84,13 @@
 			}
 			.wiki.description {
 				padding: 0;
+				margin-top: 0.25em;
 				@include components.wiki;
 			}
 		}
 		&:not(.root) {
 			margin-top: 0;
-			padding: 0 12px 12px !important;
+			padding: 0 8px 8px !important;
 			border-left: 0 none !important;
 		}
 	}
